# error-forest

./: AGENT.md  Cargo.toml  README.md
examples/: tutorial.rs
memory/: JOURNAL.md
src/: burst_ecology.rs  distributed_spore.rs  gf256.rs  hub_tree.rs  lib.rs  mycorrhizal_channel.rs  network_shannon.rs  phyto_code.rs  reed_solomon.rs
tests/: integration.rs
